--- a/todoapp/package.json
+++ b/todoapp/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.18",
     "core-js": "^2.6.5",
+    "uuid": "^3.3.2",
     "vue": "^2.6.6"
   },
   "devDependencies": {
